# AdvancedCpp

./: .clang-format  .gitignore  README.md  a.out  main.cpp
List1/: main.cpp  task1.cpp  task2.cpp  vector.cpp
List2/: main.cpp  main.s  task2.cpp  task3.cpp
List3/: task1.cpp  task2.cpp  task3.cpp
List4/: main.cpp
List5/: task1.cpp  task2.cpp  task3.cpp  ziomek
List6/: task1.cpp  task2.cpp
List7/: task1.cpp  task2.cpp
Lista1/: main.cpp  task1.cpp  task2.cpp  vector.cpp  vector.hpp
Lista2/: main.cpp  task1.cpp  task2.cpp  task2.s  task3.cpp
listaDodatkowa/: CMakeLists.txt  main.cpp
listaDodatkowa/include/: calls1.h  singleton.h  singleton_dynamic.h
listaDodatkowa/src/: calls1.cpp  main.cpp  singleton.cpp  singleton_dynamic.cpp
notes/: 1. Wyrażenia lambda.md  2. Move semantics.md  3. Szablony.md  4. Programowanie równoległe.md  5. RAII.md  6. Programowanie dynamiczne.md  Podsumowanie.md
